--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "tweakpane-plugin-template",
-  "version": "0.0.0",
-  "description": "Plugin template for Tweakpane",
-  "main": "dist/tweakpane-plugin-template.js",
+  "name": "tweakpane-plugin-colors",
+  "version": "0.0.1",
+  "description": "Custom colors for Tweakpane",
+  "main": "dist/tweakpane-plugin-colors.js",
   "types": "dist/types/index.d.ts",
-  "author": "cocopon",
+  "author": "Titouan Pellerin",
   "license": "MIT",
   "files": [
     "dist"
@@ -34,7 +34,7 @@
     "@rollup/plugin-node-resolve": "^13.0.0",
     "@rollup/plugin-replace": "^2.4.1",
     "@rollup/plugin-typescript": "^8.2.0",
-    "@tweakpane/core": "^1.0.6",
+    "@tweakpane/core": "^1.0.9",
     "@typescript-eslint/eslint-plugin": "^4.15.2",
     "@typescript-eslint/parser": "^4.15.2",
     "autoprefixer": "^10.2.4",
@@ -55,5 +55,8 @@
   },
   "peerDependencies": {
     "tweakpane": "^3.0.5"
+  },
+  "dependencies": {
+    "tslib": "^2.4.0"
   }
 }
